// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Resolver Correctly resolves deploy application mutation 1`] = `
Array [
  Object {
    "cluster": "crucial-owl",
    "name": "Code",
  },
  Object {
    "0": "2",
    "1": "0",
    "10": "T",
    "11": "1",
    "12": "4",
    "13": ":",
    "14": "1",
    "15": "9",
    "16": ":",
    "17": "0",
    "18": "9",
    "19": ".",
    "2": "1",
    "20": "5",
    "21": "9",
    "22": "8",
    "23": "2",
    "24": "2",
    "25": "9",
    "26": "2",
    "27": "2",
    "28": "5",
    "29": "Z",
    "3": "8",
    "4": "-",
    "5": "0",
    "6": "7",
    "7": "-",
    "8": "0",
    "9": "3",
    "cluster": "crucial-owl",
    "name": "GenTime",
  },
  Object {
    "0": "k",
    "1": "l",
    "2": "u",
    "3": "s",
    "4": "t",
    "5": "e",
    "6": "r",
    "7": "l",
    "8": "e",
    "9": "t",
    "cluster": "crucial-owl",
    "name": "Location",
  },
  Object {
    "0": "P",
    "1": "o",
    "10": "c",
    "11": "u",
    "12": "t",
    "13": "e",
    "14": "W",
    "15": "o",
    "16": "r",
    "17": "k",
    "18": ":",
    "19": " ",
    "2": "l",
    "20": "w",
    "21": "r",
    "22": "o",
    "23": "n",
    "24": "g",
    "25": " ",
    "26": "w",
    "27": "o",
    "28": "r",
    "29": "k",
    "3": "l",
    "30": " ",
    "31": "r",
    "32": "e",
    "33": "s",
    "34": "o",
    "35": "u",
    "36": "r",
    "37": "c",
    "38": "e",
    "39": "a",
    "4": "A",
    "40": "p",
    "41": "p",
    "42": "l",
    "43": "i",
    "44": "c",
    "45": "a",
    "46": "t",
    "47": "i",
    "48": "o",
    "49": "n",
    "5": "n",
    "50": "s",
    "51": "o",
    "52": "p",
    "53": "e",
    "54": "r",
    "55": "a",
    "56": "t",
    "57": "i",
    "58": "o",
    "59": "n",
    "6": "d",
    "60": "d",
    "61": "e",
    "62": "p",
    "63": "l",
    "64": "o",
    "65": "y",
    "7": "E",
    "8": "x",
    "9": "e",
    "cluster": "crucial-owl",
    "name": "Message",
  },
  Object {
    "cluster": "crucial-owl",
    "name": "Ref",
  },
  Object {
    "cluster": "myminikube",
    "name": "Code",
  },
  Object {
    "0": "2",
    "1": "0",
    "10": "T",
    "11": "1",
    "12": "4",
    "13": ":",
    "14": "1",
    "15": "9",
    "16": ":",
    "17": "1",
    "18": "0",
    "19": ".",
    "2": "1",
    "20": "0",
    "21": "9",
    "22": "5",
    "23": "4",
    "24": "8",
    "25": "3",
    "26": "4",
    "27": "3",
    "28": "4",
    "29": "Z",
    "3": "8",
    "4": "-",
    "5": "0",
    "6": "7",
    "7": "-",
    "8": "0",
    "9": "3",
    "cluster": "myminikube",
    "name": "GenTime",
  },
  Object {
    "0": "k",
    "1": "l",
    "2": "u",
    "3": "s",
    "4": "t",
    "5": "e",
    "6": "r",
    "7": "l",
    "8": "e",
    "9": "t",
    "cluster": "myminikube",
    "name": "Location",
  },
  Object {
    "0": "P",
    "1": "o",
    "10": "c",
    "11": "u",
    "12": "t",
    "13": "e",
    "14": "W",
    "15": "o",
    "16": "r",
    "17": "k",
    "18": ":",
    "19": " ",
    "2": "l",
    "20": "w",
    "21": "r",
    "22": "o",
    "23": "n",
    "24": "g",
    "25": " ",
    "26": "w",
    "27": "o",
    "28": "r",
    "29": "k",
    "3": "l",
    "30": " ",
    "31": "r",
    "32": "e",
    "33": "s",
    "34": "o",
    "35": "u",
    "36": "r",
    "37": "c",
    "38": "e",
    "39": "a",
    "4": "A",
    "40": "p",
    "41": "p",
    "42": "l",
    "43": "i",
    "44": "c",
    "45": "a",
    "46": "t",
    "47": "i",
    "48": "o",
    "49": "n",
    "5": "n",
    "50": "s",
    "51": "o",
    "52": "p",
    "53": "e",
    "54": "r",
    "55": "a",
    "56": "t",
    "57": "i",
    "58": "o",
    "59": "n",
    "6": "d",
    "60": "d",
    "61": "e",
    "62": "p",
    "63": "l",
    "64": "o",
    "65": "y",
    "7": "E",
    "8": "x",
    "9": "e",
    "cluster": "myminikube",
    "name": "Message",
  },
  Object {
    "cluster": "myminikube",
    "name": "Ref",
  },
]
`;

exports[`Application Resolver Correctly resolves undeploy application mutation 1`] = `
Array [
  Object {
    "cluster": "crucial-owl",
    "name": "Code",
  },
  Object {
    "0": "2",
    "1": "0",
    "10": "T",
    "11": "1",
    "12": "4",
    "13": ":",
    "14": "3",
    "15": "6",
    "16": ":",
    "17": "3",
    "18": "3",
    "19": ".",
    "2": "1",
    "20": "5",
    "21": "9",
    "22": "3",
    "23": "5",
    "24": "1",
    "25": "1",
    "26": "5",
    "27": "0",
    "28": "8",
    "29": "Z",
    "3": "8",
    "4": "-",
    "5": "0",
    "6": "7",
    "7": "-",
    "8": "0",
    "9": "3",
    "cluster": "crucial-owl",
    "name": "GenTime",
  },
  Object {
    "0": "k",
    "1": "l",
    "2": "u",
    "3": "s",
    "4": "t",
    "5": "e",
    "6": "r",
    "7": "l",
    "8": "e",
    "9": "t",
    "cluster": "crucial-owl",
    "name": "Location",
  },
  Object {
    "0": "P",
    "1": "o",
    "10": "c",
    "11": "u",
    "12": "t",
    "13": "e",
    "14": "W",
    "15": "o",
    "16": "r",
    "17": "k",
    "18": ":",
    "19": " ",
    "2": "l",
    "20": "w",
    "21": "r",
    "22": "o",
    "23": "n",
    "24": "g",
    "25": " ",
    "26": "w",
    "27": "o",
    "28": "r",
    "29": "k",
    "3": "l",
    "30": " ",
    "31": "r",
    "32": "e",
    "33": "s",
    "34": "o",
    "35": "u",
    "36": "r",
    "37": "c",
    "38": "e",
    "39": "a",
    "4": "A",
    "40": "p",
    "41": "p",
    "42": "l",
    "43": "i",
    "44": "c",
    "45": "a",
    "46": "t",
    "47": "i",
    "48": "o",
    "49": "n",
    "5": "n",
    "50": "s",
    "51": "o",
    "52": "p",
    "53": "e",
    "54": "r",
    "55": "a",
    "56": "t",
    "57": "i",
    "58": "o",
    "59": "n",
    "6": "d",
    "60": "u",
    "61": "n",
    "62": "d",
    "63": "e",
    "64": "p",
    "65": "l",
    "66": "o",
    "67": "y",
    "7": "E",
    "8": "x",
    "9": "e",
    "cluster": "crucial-owl",
    "name": "Message",
  },
  Object {
    "cluster": "crucial-owl",
    "name": "Ref",
  },
  Object {
    "cluster": "myminikube",
    "name": "Code",
  },
  Object {
    "0": "2",
    "1": "0",
    "10": "T",
    "11": "1",
    "12": "4",
    "13": ":",
    "14": "3",
    "15": "6",
    "16": ":",
    "17": "3",
    "18": "4",
    "19": ".",
    "2": "1",
    "20": "0",
    "21": "9",
    "22": "5",
    "23": "6",
    "24": "5",
    "25": "4",
    "26": "8",
    "27": "4",
    "28": "6",
    "29": "Z",
    "3": "8",
    "4": "-",
    "5": "0",
    "6": "7",
    "7": "-",
    "8": "0",
    "9": "3",
    "cluster": "myminikube",
    "name": "GenTime",
  },
  Object {
    "0": "k",
    "1": "l",
    "2": "u",
    "3": "s",
    "4": "t",
    "5": "e",
    "6": "r",
    "7": "l",
    "8": "e",
    "9": "t",
    "cluster": "myminikube",
    "name": "Location",
  },
  Object {
    "0": "P",
    "1": "o",
    "10": "c",
    "11": "u",
    "12": "t",
    "13": "e",
    "14": "W",
    "15": "o",
    "16": "r",
    "17": "k",
    "18": ":",
    "19": " ",
    "2": "l",
    "20": "w",
    "21": "r",
    "22": "o",
    "23": "n",
    "24": "g",
    "25": " ",
    "26": "w",
    "27": "o",
    "28": "r",
    "29": "k",
    "3": "l",
    "30": " ",
    "31": "r",
    "32": "e",
    "33": "s",
    "34": "o",
    "35": "u",
    "36": "r",
    "37": "c",
    "38": "e",
    "39": "a",
    "4": "A",
    "40": "p",
    "41": "p",
    "42": "l",
    "43": "i",
    "44": "c",
    "45": "a",
    "46": "t",
    "47": "i",
    "48": "o",
    "49": "n",
    "5": "n",
    "50": "s",
    "51": "o",
    "52": "p",
    "53": "e",
    "54": "r",
    "55": "a",
    "56": "t",
    "57": "i",
    "58": "o",
    "59": "n",
    "6": "d",
    "60": "u",
    "61": "n",
    "62": "d",
    "63": "e",
    "64": "p",
    "65": "l",
    "66": "o",
    "67": "y",
    "7": "E",
    "8": "x",
    "9": "e",
    "cluster": "myminikube",
    "name": "Message",
  },
  Object {
    "cluster": "myminikube",
    "name": "Ref",
  },
]
`;

exports[`Application Resolver correctly resolves applications query 1`] = `
Array [
  Object {
    "Annotations": Object {
      "description": "Fund Trader Application",
      "status": "registered",
      "type": "instance",
    },
    "Components": Array [
      Object {
        "Cluster": "toronto",
        "Dashboard": "",
        "Kind": "APPLICATIONSERVICE",
        "Name": "fundsrv",
        "Status": "",
      },
      Object {
        "Cluster": "toronto",
        "Dashboard": "",
        "Kind": "CACHESERVICE",
        "Name": "redis-fund",
        "Status": "",
      },
    ],
    "Dashboard": "",
    "Dependencies": Array [
      Object {
        "Cluster": "toronto",
        "Dashboard": "",
        "Kind": "APPLICATIONSERVICE",
        "Name": "odm",
        "Status": "",
      },
      Object {
        "Cluster": "toronto",
        "Dashboard": "",
        "Kind": "MESSAGEQUEUE",
        "Name": "mq",
        "Status": "",
      },
      Object {
        "Cluster": "toronto",
        "Dashboard": "",
        "Kind": "DATABASESERVICE",
        "Name": "db2",
        "Status": "",
      },
    ],
    "Labels": Object {
      "APPLICATION": "",
      "fundtrader": "",
      "instance": "",
    },
    "Name": "fundtrader",
    "Relationships": Array [
      Object {
        "End": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "APPLICATIONSERVICE",
          "Name": "odm",
          "Status": "",
        },
        "Start": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "APPLICATIONSERVICE",
          "Name": "fundsrv",
          "Status": "",
        },
        "Status": "",
        "Type": "usesExisting",
      },
      Object {
        "End": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "MESSAGEQUEUE",
          "Name": "mq",
          "Status": "",
        },
        "Start": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "APPLICATIONSERVICE",
          "Name": "fundsrv",
          "Status": "",
        },
        "Status": "",
        "Type": "usesExisting",
      },
      Object {
        "End": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "CACHESERVICE",
          "Name": "redis-fund",
          "Status": "",
        },
        "Start": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "APPLICATIONSERVICE",
          "Name": "fundsrv",
          "Status": "",
        },
        "Status": "",
        "Type": "usesCreated",
      },
      Object {
        "End": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "DATABASESERVICE",
          "Name": "db2",
          "Status": "",
        },
        "Start": Object {
          "Cluster": "toronto",
          "Dashboard": "",
          "Kind": "APPLICATIONSERVICE",
          "Name": "fundsrv",
          "Status": "",
        },
        "Status": "",
        "Type": "usesExisting",
      },
    ],
    "Status": "registered",
  },
  Object {
    "Annotations": Object {
      "description": "Sample Application for deploy",
      "status": "deployed",
      "type": "instance",
    },
    "Components": Array [
      Object {
        "Cluster": "myminikube",
        "Dashboard": "",
        "Kind": "APPLICATIONSERVICE",
        "Name": "player2",
        "Status": "deployed",
      },
      Object {
        "Cluster": "toronto",
        "Dashboard": "",
        "Kind": "APPLICATIONSERVICE",
        "Name": "player1",
        "Status": "deployed",
      },
    ],
    "Dashboard": "",
    "Dependencies": null,
    "Labels": Object {
      "APPLICATION": "",
      "instance": "",
      "players": "",
    },
    "Name": "players",
    "Relationships": null,
    "Status": "deployed",
  },
]
`;

exports[`Application Resolver correctly resolves create dashboard mutation 1`] = `"Application players has no components"`;

exports[`Application Resolver correctly resolves delete application mutation 1`] = `"Success"`;

exports[`Application Resolver correctly resolves register application mutation 1`] = `"Success"`;
